fhir/10.0.0/POST_schedule-practitioner-stats.md
# POST Schedule Practitioner Stats - eHealth Infrastructure v10.0.0

* [**Table of Contents**](toc.md)
* **POST Schedule Practitioner Stats**

## POST Schedule Practitioner Stats

`POST [base]/$schedule-practitioner-stats`

**Request Headers**

```
Authorization: Bearer eyJhbGciOiJub25lIn0.eyJ1c2VyX2lkIjoiMThlOTNlNzYtYWI5Mi00NzljLWIwMDgtNTY4Njc3NDMzZjMzIiwicmVhbG1fYWNjZXNzIjp7InJvbGVzIjpbInJlcG9ydC1ub24tYW5vbnltaXplZCIsIiRmZXRjaC1wcmFjdGl0aW9uZXItc3RhdHMiLCJCaW5hcnkucmVhZCJdfSwiY29udGV4dCI6eyJvcmdhbml6YXRpb25faWQiOiJodHRwczovL29yZ2FuaXphdGlvbi5jaXQtcmVwb3J0aW5nLTEzMTMubG9jYWwvZmhpci9Pcmdhbml6YXRpb24vNDU5MDIiLCJ0ZWFtX29uX2VvYyI6ZmFsc2V9LCJ1c2VyX3R5cGUiOiJQUkFDVElUSU9ORVIifQ.
Accept: application/fhir+json;q=1.0, application/json+fhir;q=0.9
User-Agent: HAPI-FHIR/8.6.5 (FHIR Client; FHIR 4.0.1/R4; apache)
Accept-Encoding: gzip
Content-Type: application/fhir+json; charset=UTF-8

```

**Body**:

```
{
  "resourceType": "Parameters",
  "parameter": [
    {
      "name": "anonymization",
      "valueString": "None"
    },
    {
      "name": "organization",
      "valueReference": {
        "reference": "https://organization.cit-reporting-1313.local/fhir/Organization/45902"
      }
    },
    {
      "name": "period",
      "valuePeriod": {
        "start": "2026-04-16T11:46:20+00:00",
        "end": "2026-04-16T11:46:20+00:00"
      }
    }
  ]
}

```

**Response Headers**

```
date: Thu, 16 Apr 2026 11:46:22 GMT
x-request-id: a0fe588b-c165-49af-b421-f0bd9703210c
server: istio-envoy
x-envoy-upstream-service-time: 122
expires: 0
x-frame-options: DENY
pragma: no-cache
last-modified: Thu, 16 Apr 2026 11:46:22 GMT
x-content-type-options: nosniff
x-xss-protection: 0
x-b3-traceid: 660d31f5b1d31d55c9f9b68ff1e6748d
x-powered-by: HAPI FHIR 8.6.5 REST Server (FHIR Server; FHIR 4.0.1/R4)
content-location: https://reporting.cit-reporting-1313.local/fhir/Binary/1021/_history/1
content-type: application/fhir+json; charset=UTF-8
location: https://reporting.cit-reporting-1313.local/fhir/Binary/1021/_history/1
cache-control: no-cache, no-store, max-age=0, must-revalidate

```

**Response**

```
{
  "resourceType": "Binary",
  "id": "1021",
  "meta": {
    "versionId": "1",
    "lastUpdated": "2026-04-16T11:46:22.214+00:00",
    "source": "#a0fe588b-c165-49af-b421-f0bd9703210c",
    "profile": [
      "http://hl7.org/fhir/StructureDefinition/Binary"
    ]
  },
  "contentType": "text/plain",
  "securityContext": {
    "identifier": {
      "value": "18e93e76-ab92-479c-b008-568677433f33"
    }
  },
  "data": "Kk5PVCBHRU5FUkFURUQgWUVUKg=="
}

```

